javaDSL/src/test/resources/typeSystemTestModels/valid/methods/MethodNoAccessPairModifier.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.valid.methods;

public class MethodNoAccessPairModifier {
  public static void setName(){

  }

  private void setName1(){

  }

  protected void setName2(){

  }

}
