javaDSL/src/test/resources/typeSystemTestModels/invalid/methods/MethodFormalParametersDifferentName.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.invalid.methods;

public class MethodFormalParametersDifferentName {

  public void setName(String name, String name) {

  }

}
